index.css
#timer {
    position: absolute;
    top: 40%;
    width: 100%;
    text-align: center;
    color: white;
    font-size: 20vh;
    text-shadow: 2px 2px #000000;
}

html, body {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
    font-family: 'Indie Flower', cursive;
}

body {
    background-size: contain;
    background-repeat: no-repeat;
    background-color: transparent;
    background-position: center;
}

body.dog {
    background-image: url('img/dog.svg');
}

body.cat {
    background-image: url('img/cat.svg');
}

.image-background {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-position: center;
    height: 100%;
    width: 100%;
}

#image-wrapper {
    background-size: cover;
    box-shadow:         inset 0 0 10px white;

    /* Add the blur effect */
    filter: blur(8px);
    -webkit-filter: blur(8px);
}

#image {
    background-repeat: no-repeat;
    background-size: contain;
}

.btn {
    height: 5vw;
    width: 5vw;
    border: 0px;
    position: absolute;
    bottom: 0px;
    right: 0px;
    background-size: contain;
    background-repeat: no-repeat;
    background-color: transparent;
    display: none;
    margin: 10px;
}

body.dog .btn-cat{
    display: inline;
}

body.cat .btn-dog{
    display: inline;
}

.btn.btn-dog {
    background-image: url('img/dog.svg');
}

.btn.btn-cat {
    background-image: url('img/cat.svg');
}

div#preload { 
    display: none; 
}

